tests/machine/x/python/group_by.error
run: exit status 1
--- People grouped by city ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/group_by.py", line 206, in <module>
    print(s["city"], ": count =", s["count"], ", avg_age =", s["avg_age"])
          ~^^^^^^^^
TypeError: 'Auto2' object is not subscriptable

